--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -2,301 +2,12 @@
 
 * {
     box-sizing: border-box;
+    text-decoration: none;
 }
 
 body {
     background-color: #FFFF;
     font-family: 'Roboto', sans-serif;
-}
-
-.movies {
-    width: 100vw;
-    margin-top: 67px;
-}
-
-.section-title {
-    height: 110px;
-    font-size: 24px;
-    color: #293845;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.movies-option {
-    width: 100vw;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    margin: 0 auto;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-
-.movie {
-    width: 145px;
-    height: 209px;
-    margin-bottom: 11px;
-    border-radius: 3px;   
-    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.movie img {
-    width: 129px;
-    height: 193px;   
-}
-
-.sections {
-    width: 100vw;
-    margin-top: 67px;
-    margin-bottom: 118px;
-}
-
-.day {
-    font-size: 20px;
-    height: 35px;
-    color: #293845;
-    margin-left: 24px;
-    margin-bottom: 22px;
-}
-
-.hour-content {
-    display: flex;
-    padding-left: 23px;
-}
-
-.hour {
-    width: 83px;
-    height: 43px; 
-    background-color: #E8833A;
-    color: #FFFF;
-    font-size: 18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 8px;
-    margin-bottom: 25px;
-    border: none;
-}
-
-.link {
     text-decoration: none;
 }
 
-.footer {
-    height: 117px;
-    background-color: #DFE6ED;
-    padding-left: 10px;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-}
-
-.movie-box-little {
-    background-color: #FFFF;
-    width: 64px;
-    height: 89px; 
-    margin-top: 14px;
-    box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.footer img {
-    width: 48px;
-    height: 72px; 
-
-}
-
-span {
-    font-size: 26px;
-    margin-left: 14px;
-    margin-top: 40px;
-}
-
-.box-movie-and-day {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.box-movie-and-day > p {
-    font-size: 26px;
-    margin-left: 14px;
-}
-
-.seats-content {
-    width: 100vw;
-    margin-top: 67px;
-}
-
-.seats-list {
-    width: 100vw;
-    height: 300px;
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 31px;
-    margin-top: -18px;
-}
-
-.number-seat {
-    background-color: #C3CFD9;
-    border: 1px solid #808F9D;
-    width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    font-size: 11px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 7px;
-
-}
-
-.seat-state-list {
-    display: flex;
-    justify-content: space-around;
-    width: 76vw;
-    margin: 16px auto 42px auto;
-}
-
-.seat-state {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.seat-state > p {
-    font-size: 13px;
-    text-align: center;
-}
-
-.seat-state > div {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-}
-
-.selected {
-    background-color: #8DD7CF;
-    border: 1px solid #1AAE9E;
-    width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    font-size: 11px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 7px;
-}
-
-.available {
-    background-color: #C3CFD9;
-    border: 1px solid #7B8B99;
-}
-
-.unavailable {
-    background-color: #FBE192;
-    border: 1px solid #F7C52B;
-    width: 26px;
-    height: 26px;
-    border-radius: 50%;
-    font-size: 11px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 7px;
-    pointer-events: none;
-}
-
-.form {
-    margin-left: 24px;
-}
-
-.form input {
-    width: 327px;
-    height: 51px;
-    border: 1px solid #D4D4D4;
-    margin-bottom: 7px;
-}
-
-.form > p {
-    font-size: 18px;
-    color: #293845;
-    margin-bottom: 3px;
-}
-
-.reserve-seats {
-    width: 225px;
-    height: 42px;
-    background-color: #E8833A;
-    font-size: 18px;
-    color: #FFFF;
-    border-radius: 3px;
-    border: none;
-    margin-top: 50px;
-    margin-bottom: 150px;
-}
-
-
-.success {
-    width: 100vw;
-    margin-top: 67px;
-}
-
-.success h2 {
-    font-size: 24px;
-    color: #247A6B;
-    font-weight: bold;
-    height: 110px;
-    width: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    text-align: center;
-}
-
-h3 {
-    color: #293845;
-    font-size: 24px;
-    font-weight: bold;
-    margin-top: 45px;
-    margin-bottom: 10px;
-}
-
-.content > p {
-    font-size: 22px;
-    color: #293845;
-    margin-bottom: 3px;
-}
-
-.content {
-    width: 100vw;
-    padding-left: 29px;
-}
-
-.go-to-home {
-    width: 225px;
-    height: 42px;
-    background-color: #E8833A;
-    font-size: 18px;
-    color: #FFFF;
-    border-radius: 3px;
-    border: none;
-    margin-top: 72px;
-}
-
-.box-button {
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-}
